--- a/index.html
+++ b/index.html
@@ -42,12 +42,8 @@
     </div>
     <!-- Write a paragraph about the surprise -->
     <p>Click on the last box for a special surprise! ❤️</p>
-    <p>
-        <br />
-        <br /><br /><br /><br />
-        
-    </p>
-   </main>
+    <p>OMGGGG ITS DECEMBER THIRD!!!! HAPPYYYY ANNIVERSARY BABEEEE! I can’t believe that it’s only been a year it felt like way longer and everyone I talked to also thought that it’s been almost one and a half years. I’m so glad I spent this last year with you and I can say for fact, you’re the best person to ever come into my life and I’m just happy to be with you. I can’t wait to see what the future years look like being with you and enjoying our future anniversaries. Being together with you has enlightened me to know that I’m not fully alone in this world and there’s other people that care for me just like you do since you’re the reason I love living my life everyday. I know we have more relationship goals that we get to accomplish and I hope within the few years to come we will sort everything out then we’ll finally be together and get our sleepovers. I also know that both of us are gonna be going to college next year and at this point in time we may or may not be back here so I just wanna make the best of the time that we have right now with our anniversary and I want to say today in the library should be a blast.💥 Can you believe this all started through Snapchat? Now we have no record on who asked who out first, all we know is that during this time we were probably confessing our feelings for each other and stuff happened now we’re together and I can say is the best outcome I could’ve possibly imagined!!! I love you so much and I can’t wait to marry you in the future!<br><br><br></p>
+</main>
 <footer>
     <p>❤️I love you sooo much!!! - Your ❤️ful lover</p>
 </footer>
@@ -71,4 +67,3 @@
 </script>
 </body>
 </html>
-
